syntax = "proto3";

import "common.proto";

package masterfile.registry.v1;

message DeploymentType {

	oneof deployment_type {
		Factory factory = 1;
		Contract contract = 2;
	}

	message Factory {}
	message Contract {}
}

message ContractType {

	oneof contract_type {
		Safe safe = 1;
		Drop drop = 2;
	}

	message Safe {}
	message Drop {}
}

message Deployment {
	string address = 1;
	uint64 ordinal = 2;
	DeploymentType deployment_type = 3;
	ContractType contract_type = 4;
}

message Deployments {
	repeated Deployment deployments = 1;
}

message RegistryEvent {

	oneof event {
		/*//////////////////////////////////////////////////////////////////////////
								  		Registry
		//////////////////////////////////////////////////////////////////////////*/
		DeploymentAdded deployment_added = 1;
		DeploymentRevoked deployment_revoked = 2;
		FactoryAdded factory_added = 3;
		FactoryRevoked factory_revoked = 4;

		/*//////////////////////////////////////////////////////////////////////////
								  	  Access Control
		//////////////////////////////////////////////////////////////////////////*/
		RoleAdminChanged role_admin_changed = 5;
		RoleGranted role_granted = 6;
		RoleRevoked role_revoked = 7;
	}

	/*//////////////////////////////////////////////////////////////////////////
                                  		Registry
    //////////////////////////////////////////////////////////////////////////*/

	message DeploymentAdded {
		string name = 1;
		string deployment = 2;
	}

	message DeploymentRevoked {
		string name = 1;
		string deployment = 2;
	}

	message FactoryAdded {
		string name = 1;
		string factory = 2;
		uint64 version = 3;
	}

	message FactoryRevoked {
		string name = 1;
		string factory = 2;
		uint64 version = 3;
	}

	/*//////////////////////////////////////////////////////////////////////////
                                  	  Access Control
    //////////////////////////////////////////////////////////////////////////*/

	message RoleAdminChanged {
		string name = 1;
		string previous_admin_role = 2;
		string new_admin_role = 3;
	}

	message RoleGranted {
		string role = 1;
		string account = 2;
		string sender = 3;
	}

	message RoleRevoked {
		string role = 1;
		string account = 2;
		string sender = 3;
	}
}